# ChangeLog for net-im/gtalk
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gtalk/Attic/ChangeLog,v 1.3 2004/07/01 22:18:29 eradicator Exp $

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> gtalk-0.99.10.ebuild:
  virtual/glibc -> virtual/libc

*gtalk-0.99.10 (04 Jan 2004)

  04 Jan 2004; Daniel Ahlberg <aliz@gentoo.org> gtalk-0.99.10.ebuild:
  Initial import. Ebuild submitted by Walter Mundt <emage@spamcop.net> in #9518.
