@@ -1,3 +1,9 @@
-MD5 9f09c3039b940beef91e59bea29a797e ChangeLog 495
-MD5 947333f104fc80dc0e405d441ea4c51b gtalk-0.99.10.ebuild 1386
+MD5 d092a5000bbc6ef0a82568e3df2ac874 ChangeLog 588
+RMD160 13b2aafde0f4245b10318131e2254dfdfdc66e0a ChangeLog 588
+SHA256 70e98debfc417ab957a4bcb6c03120c294b37efcced415bf0679e5ccf5501dde ChangeLog 588
 MD5 786daa1beae2f9ba93539bb7585f5d69 files/digest-gtalk-0.99.10 65
+RMD160 698614b7ae72740e89b653e54abd2d515908a1f9 files/digest-gtalk-0.99.10 65
+SHA256 8d4298e3ab82300b526182fb571bfcf1b1f07a8dfc2e3cf27b148b2dd3478ed5 files/digest-gtalk-0.99.10 65
+MD5 afd79c4608f60129d9c3fdf4ce7a98b2 gtalk-0.99.10.ebuild 1403
+RMD160 b71b809d579eb394a6ea753dfd276258d40a5c6e gtalk-0.99.10.ebuild 1403
+SHA256 e83736784ed11051b78a9dd5ae8a0c781370816935c27a0ef6195bceef198bee gtalk-0.99.10.ebuild 1403
