@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gtalk
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gtalk/Attic/ChangeLog,v 1.3 2004/07/01 22:18:29 eradicator Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gtalk/Attic/ChangeLog,v 1.4 2006/03/16 13:39:01 caleb Exp $
+
+  16 Mar 2006; Caleb Tennis <caleb@gentoo.org> gtalk-0.99.10.ebuild:
+  Fix to X dep to modular X
 
   01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> gtalk-0.99.10.ebuild:
   virtual/glibc -> virtual/libc
